Increase heap size, add GC tuning flags